# adthena_task

./: .flake8  .gitignore  Dockerfile  README.md  noxfile.py  pyproject.toml
docs/: conf.py  index.rst  reference.rst
notebooks/: Baseline.ipynb  EDA.ipynb  baseline_utils.py
src/adthena_task/: __init__.py  config.py  constants.py
src/adthena_task/eval/: eval_on_test_file.py  fast.py  fastapi.py  utils.py
src/adthena_task/models/: bert.py
src/adthena_task/preprocessing/: text_preprocessor.py
src/adthena_task/training/: datamodule.py  main.py  trainer.py  training_module.py  utils.py
src/adthena_task/utils/: metrics.py  timing.py
tests/: conftest.py  test_prose.py
