[tool.poetry]
name = "adthena_task"
version = "0.1.1"
description = "Description of your project."
authors = ["Your Name <your_name@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.1"
tensorflow = "^2.4.1"
fastapi = "^0.63.0"
transformers = "^4.3.2"
uvicorn = "^0.13.3"

[tool.poetry.scripts]
adthena_task = "adthena_task.prose:main"


[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = "^5.4"
pytest-cov = "^2.11.1"
pytest-mock = "^3.5.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-black = "^0.2.1"
flake8-import-order = "^0.18.1"
flake8-bugbear = "^20.11.1"
flake8-bandit = "^2.1.2"
safety = "^1.10.3"
mypy = "^0.800"
flake8-annotations = "^2.5.0"
typeguard = "^2.10.0"
flake8-docstrings = "^1.5.0"
darglint = "^1.6.0"
xdoctest = "^0.15.4"
Sphinx = "^3.4.3"
sphinx-autodoc-typehints = "^1.11.1"
codecov = "^2.1.11"
nltk = "^3.5"
pandas = "^1.2.2"
scikit-learn = "^0.24.1"
torch = "^1.7.1"
[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["adthena_task"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
